[package]
name = "tokio_topic_gracefull_shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
mini-redis = "0.4.1"
bytes = "1.5.0"
tokio-util = "0.7.10"